<resources>
    <string name="app_name">Knockwork</string>
    <string name="facebook_application_id" translatable="false">1247438575403320</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1247438575403320</string>
    <string name="hire">Hire</string>
    <string name="work">Work</string>
    <string name="signin">SIGN IN</string>
    <string name="skip">SKIP</string>
    <string name="terms">By Joining you agree to our</string>
    <string name="temscondition"><![CDATA[Terms&Conditions]]></string>
    <string name="SignEmail">Sign Up with Email</string>
    <string name="signgmail">Connect With Gmail</string>
    <string name="signfacebook">Connect with Facebook</string>
    <string name="email">Email</string>
    <string name="rempass">Remember my password</string>
    <string name="login">Login</string>
    <string name="account">Don\'t have an Account?</string>
    <string name="signhere">SignUp here.</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sample Employeer</string>
    <string name="nav_header_title_lancer">Sample Lancer</string>
    <string name="nav_header_subtitle">sample@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>
    <string name="action_add">Create</string>
    <string name="signPhoneNumber">Sign Up with Number</string>
    <string name="pServices">Popular Services</string>
    <string name="profilestatus">Profile Completions</string>
    <string name="category">Top Categories</string>
    <string name="country">United States</string>
    <string name="moneyearned">25k earned</string>
    <string name="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, send do eiusmod tempor incididunt ut labor et dolore magna aliqua....</string>
    <string name="feedback">80%</string>
    <string name="inboxName">Cristina Afeeba</string>
    <string name="inboxdescription">Professional Designer needed for Tshirts...........</string>
    <string name="icandothis">I can do this </string>
    <string name="fixedprice">Fixed Price </string>
    <string name="price_range">5k - 7k</string>
    <string name="posted2daysago">Posted 2 days ago </string>
    <string name="quotes"> 85 Quotes </string>
    <string name="status"> Job Status </string>
    <string name="job_posting_info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, send do eiusmod tempor incididunt ut labor et dolore magna aliqua....</string>
    <string name="job_posting_edit"> Edit </string>
    <string name="job_posting_remove"> Remove </string>
    <string name="title_activity_inbox">InboxActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search_page_free_lancer">SearchPageFreeLancer</string>
    <string name="title_activity_search_page_freelancer">SearchPageFreelancerActivity</string>
    <string name="apply">Apply </string>
    <string name="title_activity_free_lancer_dashboard">FreeLancerDashboard</string>
    <string name="title_activity_free_lancer_dashboard_bids">Manage Bids</string>
    <string name="title_activity_manage_bids">ManageBidsActivity</string>
    <string name="JobName">Professional Designer Needed for T-shirt and other Products, WebProjects</string>
    <string name="poasted">Poasted 2 days ago</string>
    <string name="quotesfreelancer">85 Quotes</string>
    <string name="duration">Duration</string>
    <string name="durationinmonths"> 1-3 months </string>
    <string name="budget"> Budget</string>
    <string name="rangeprice">5k-7k</string>
    <string name="jobtype">Job Type</string>
    <string name="projectBased">Project Based </string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, send do eiusmod tempor incididunt ut labor et dolore magna aliqua.... </string>
    <string name="description1">- Morbi enim nunc faucibus a. Duis convallis convallis tellus id. Arcu..</string>
    <string name="description2">- non sodales neque sodales ut etiam sit. sed viverra ipsum nunc</string>
    <string name="description3">- aliquet bibendum enim facilisis. Quis enim lobortis scelerisque..</string>
    <string name="description4">- fermentum. vel pretium lectus wuam id. Arcu cursus vitae congue..</string>
    <string name="requird_skills">Requird Skills</string>
    <string name="Photoshop">Photoshop </string>
    <string name="illustrator">Illustrator</string>
    <string name="Editor">Editor</string>
    <string name="Designer">Designer</string>
    <string name="title_activity_search_freelancer">SearchFreelancerActivity</string>
    <string name="paymentSetting">Payment Setting </string>
    <string name="manageCashAccount">Manage Cash Account</string>
    <string name="Transactionfees">Transaction Fee</string>
    <string name="paymentmethod">Add/Edit Payment Method</string>
    <string name="General">General</string>
    <string name="notification">Notification</string>
    <string name="about">About </string>
    <string name="aboutus">About Us</string>
    <string name="terms_of_services">Terms of Services</string>
    <string name="version">Versions</string>
    <string name="jobpostingname">Enter the name of your job post</string>
    <string name="jobcategory">Job Category </string>
    <string name="jobdescription">Job Description </string>
    <string name="AdditionalProjectFile">Additional Project File</string>
    <string name="upload">Upload</string>
    <string name="details">Details </string>
    <string name="typesofproject">Types of Projects</string>
    <string name="onetimeproject">- One Time Projects</string>
    <string name="ongoingproject">- OnGoing Projects </string>
    <string name="notypeproject">- No type of Projects</string>
    <string name="add">Add</string>
    <string name="experties">Skills and Experties </string>
    <string name="addskills">Add Skills</string>
    <string name="expert">Experties </string>
    <string name="JobNamepage">Job Name</string>
    <string name="visibility">Visibility</string>
    <string name="membervisibility">Who can see your job ..?</string>
    <string name="anyone">- Anyone Can See </string>
    <string name="onlyupwork">- Only Upwork member only</string>
    <string name="invite">- Invite a friend only</string>
    <string name="BudgetJOb">Budget</string>
    <string name="paybyhours">- Pay by the Hours</string>
    <string name="payweekly">- Pay by the Weekly</string>
    <string name="paybymonthly">- Pay by the Monthly</string>
    <string name="paybyeveryotherday">- Pay by Every other day</string>
    <string name="paybyeveryotherweek">- Pay by Every other Week</string>
    <string name="postajob">Post a Job</string>
    <string name="spinner_years">
        <item>Select</item>
        <item>As per Place holder Bid</item>
        <item>As per Daily Basis</item>
        <item>According to Hours</item></string>
    <string-array name="spinner_months">
        <item> 00 </item>
        <item> 01 </item>
        <item> 02 </item>
        <item> 03 </item>
        <item> 04 </item>
        <item> 05 </item>
        <item> 06 </item>
        <item> 07 </item>
        <item> 08 </item>
        <item> 09 </item>
        <item> 10 </item>
        <item> 11 </item>
    </string-array>
    <string-array name="spinner_type_of_work">
        <item> IT and Programming </item>
        <item> Mobile Application </item>
        <item> Graphics Design and Muiltimedia </item>
        <item> Writting, Content and Translation </item>
        <item> Social Media, SEO and SEM </item>
        <item> Sales and Marketing </item>
        <item> Dat Entry and Admin </item>
        <item> Finance and Accounting </item>
        <item> Customer Support and Services </item>
        <item> music and Audio </item>
        <item> Others </item>
    </string-array>
    <string-array name="spinner_belong_to">
        <item> Application Interface Design </item>
        <item> Desktop Application </item>
        <item> Ecommerce </item>
        <item> Game Development </item>
        <item> Web Development </item>
        <item> Scripts and Utilities </item>
        <item> Software Project Management </item>
        <item> Website Project Management </item>
        <item> Website Testing </item>
        <item> QA and testing </item>
        <item> Others </item>
    </string-array>
    <string-array name="spinner_availability">
        <item> Full-time : 30+ hrs/week </item>
        <item> Part-time : 10-30 hrs/week </item>
        <item> As needed : Less than 10 hrs/week </item>
        <item> Not sure at this time </item>
        <item> Currently on leave </item>
        <item> Not Available to hire </item>
    </string-array>
    <string-array name="spinner_week">
        <item> Select </item>
        <item> 10 days </item>
        <item> 2 week </item>
        <item> 3 week </item>
        <item> 1 Month </item>
        <item> 2 Months </item>
        <item> 3 Months </item>
        <item> 4 Months </item>
        <item> 5 Months </item>
        <item> 6 Months </item>
        <item> 1 Year </item>
        <item> Not Sure </item>
    </string-array>
    <string-array name="array_jobCategory">
        <item>Select Category</item>
        <item>Art and Design</item>
        <item>Data Entry</item>
        <item>Software Development</item>
        <item>Writing Content</item>
        <item>Bussiness and Marcketing</item>
        <item>Local jobs</item>
        <item>Other Projects</item>
    </string-array>
    <string name="title_activity_freelancer_inbox">FreelancerInboxActivity</string>
    <string name="title_activity_lancers">LancersActivity</string>
    <string name="title_activity_manage_job_post">ManageJobPostActivity</string>
    <string name="title_activity_freelancer_setting">FreelancerSettingActivity</string>
    <string name="more">More</string>
    <string name="title_activity_freelancer_jobs">FreelancerJobsActivity</string>
    <string name="title_activity_freelancer_job_description">FreelancerJobDescriptionActivity
    </string>
    <string name="chattingmessage">Your Chatting Message..</string>
    <string name="chatting_text">Write here</string>
    <string name="timeline">Timeline of Projects</string>
    <string name="amount">Amount : </string>
    <string name="hiredamount">$200</string>
    <string name="web">Web development</string>
    <string name="search">What are you Looking for ?</string>
    <string name="profile_name">Sample name</string>
    <string name="professional_title">Professional Title</string>
    <string name="example">Eg: Graphic Designer</string>
    <string name="min_hour_rate">Min. Hour Rate: </string>
    <string name="work_experience">Work Experience
    </string>
    <string name="dd_mm_yy">dd-mm-yyyy</string>
    <string name="txt_job_posting">Get your project done Quickly!</string>
    <string name="txt_job_posting1">Post a Project for free and start receiving proposals within minutes</string>
    <string name="txt_featured">Featured projects attract more, better-quality bids and are displayed eminently in the Featured Jobs section.</string>
    <string name="txt_recruters">Our hands-on PRIME Recruitment service ensures you get the best freelancer for your project. Our recruiters personally review all the proposals saving you time screening freelancers proposals.</string>
    <string name="txt_NDA">Freelancers must sign a Non-disclosure Agreement to work on your project. Freelancers agree to keep details discussed through private messages and files/documents/code confidential.</string>
    <string name="txt_urgent">Receive faster responses from freelancers and get your Project started within a day!</string>
</resources>