<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Freelancer.Activities.SettingFreelancerActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/setting_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Setting"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp">


    <TextView
        android:id="@+id/setting_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paymentSetting"
        android:textColor="@color/fbutton_color_peter_river"
        android:textSize="18dp"/>

        <TextView
            android:id="@+id/setting_manage_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/manageCashAccount"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/setting_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Transactionfees"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/setting_addEdit_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paymentmethod"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="16dp"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#FFA7A4A4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp">

        <TextView
            android:id="@+id/setting_general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/General"
            android:textColor="@color/fbutton_color_peter_river"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/setting_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="16dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#FFA7A4A4" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp">
        <TextView
            android:id="@+id/setting_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="@color/fbutton_color_peter_river"
            android:textSize="18dp"/>


        <TextView
            android:id="@+id/setting_aboutus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutus"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/setting_termsofServices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_services"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/setting_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="16dp"/>

    </LinearLayout>

</LinearLayout>