<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/txt_visibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visibility"
            android:textColor="@color/fbutton_color_belize_hole"
            android:textSize="20dp"
            android:gravity="center"/>
        <View
            android:layout_width="90dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="#31acf4" />

        <TextView
            android:id="@+id/txt_whocansee"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/membervisibility"
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/txt_visibalanyone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/anyone"
            android:textSize="16dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/txt_upworkmember"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/onlyupwork"
            android:textSize="16dp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/txt_invite"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/invite"
            android:textSize="16dp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/txt_budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BudgetJOb"
            android:textColor="@color/fbutton_color_belize_hole"
            android:textSize="20dp"
            android:gravity="center"/>

        <View
            android:layout_width="90dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="#31acf4" />

        <TextView
            android:id="@+id/txt_payweekly"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/payweekly"
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/txt_payhours"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/paybyhours"
        android:textSize="16dp"
        android:textColor="@color/black"
        />

        <TextView
            android:id="@+id/txt_paymonthly"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/paybymonthly"
            android:textSize="16dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/txt_payeveryotherday"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/paybyeveryotherday"
            android:textSize="16dp"
            android:textColor="@color/black"
            />


        <TextView
            android:id="@+id/txt_payeveryotherweek"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/paybyeveryotherweek"
            android:textSize="16dp"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/btn_post_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/postajob"
            android:textColor="@color/white"
            android:background="@color/fbutton_color_peter_river"/>


    </LinearLayout>

   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/txt_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textSize="20dp"
            android:textColor="@color/fbutton_color_belize_hole"
            android:gravity="center"/>

        <TextView
            android:id="@+id/txt_type_of_projects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/typesofproject"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
           />

        <TextView
            android:id="@+id/txt_one_time_projects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onetimeproject"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/txt_ongoing_projects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ongoingproject"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/txt_no_type_projects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notypeproject"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangular_border">
            <ImageView
                android:id="@+id/img_add"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_add_circle_outline_black_24dp"/>

            <TextView
                android:id="@+id/txt_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textSize="18dp"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="270dp"
            android:weightSum="2">
            <Button
                android:id="@+id/btn_details_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:gravity="center" />

            <Button
                android:id="@+id/btn_details_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Next"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:gravity="center"  />
        </LinearLayout>

    </LinearLayout>-->

</ScrollView>